# MLops

./: .gitignore  README.md  mlops_pipeline.py  pyproject.toml
docs/: README.md  requirements-mapping.md
src/data_prep/: data_prep.py
src/explainability/: model_explainability.py
src/industrialization/: model_deployment.py
src/optimization/: hyperparameter_optimization.py
src/training/: mlflow_config.py  model_training.py  thresholding.py
